Add most of all functionalities

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,31 @@
 {
-    "presets": ["env"]
+    "presets": [
+        [
+            "env",
+            {
+                "modules": false
+            }
+        ],
+        "react",
+        "stage-0",
+        "es2015"
+    ],
+    "plugins": [
+        ["transform-decorators-legacy"],
+        ["transform-object-rest-spread"],
+        ["transform-es2015-destructuring"]
+    ],
+    "env": {
+        "test": {
+            "presets": [
+                [
+                    "env",
+                    "stage-0",
+                    [ "es2015", { "modules": false } ]
+                ],
+                "react"
+            ]
+        }
+    },
+    "ignore": "node_modules"
 }
