--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-detect": "^0.2.22",
     "chai": "^4.1.2",
     "clone": "^2.1.1",
+    "cross-fetch": "^2.2.2",
     "detectrtc": "^1.3.5",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^5.0.5",
@@ -23,6 +24,7 @@
     "sdp-transform": "^2.4.1",
     "translations": "^2.2.1",
     "underscore": "^1.8.3",
+    "url-join": "^4.0.0",
     "uuid": "^3.2.1",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.7.2",
@@ -31,8 +33,12 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "mocha-webpack": "^1.1.0",
     "webpack-plugin-mocha": "0.0.2",
