--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.1",
   "main": "tbrtc-messages.js",
   "scripts": {
-    "test": "mocha-webpack --webpack-config=webpack-test.config.js --require babel-core/register test/*"
+    "test2": "mocha-webpack --webpack-config=webpack-test.config.js --require babel-core/register --require mocha-bootstrap.js test/*",
+    "test": "mocha --compilers js:babel-core/register test/*"
   },
   "author": "",
   "dependencies": {
@@ -16,9 +17,12 @@
     "chai": "^4.1.2",
     "clone": "^2.1.1",
     "cross-fetch": "^2.2.2",
+    "detect-node": "^2.0.4",
     "detectrtc": "^1.3.5",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^5.0.5",
+    "path": "^0.12.7",
     "require-dir": "^1.0.0",
     "sdp-transform": "^2.4.1",
     "translations": "^2.2.1",
@@ -39,6 +43,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "jest-webpack": "^0.5.1",
     "mocha-webpack": "^1.1.0",
     "webpack-plugin-mocha": "0.0.2",
     "webpack-shell-plugin": "^0.5.0"
